--- a/package.json
+++ b/package.json
@@ -1,40 +1,54 @@
 {
-	"name": "v2rm",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"build": "webpack --mode production && push-dir --dir=dist --branch=master",
-		"dev": "NODE_ENV=development webpack-dev-server --mode=development --progress --colors --hot --inline"
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"autoprefixer": "^8.6.3",
-		"babel-core": "^6.26.3",
-		"babel-loader": "^7.1.4",
-		"babel-preset-env": "^1.7.0",
-		"clean-webpack-plugin": "^0.1.19",
-		"copy-webpack-plugin": "^4.6.0",
-		"css-hot-loader": "^1.4.2",
-		"css-loader": "^0.28.11",
-		"eslint": "^5.0.0",
-		"eslint-config-prettier": "^2.9.0",
-		"eslint-plugin-prettier": "^2.6.1",
-		"extract-text-webpack-plugin": "^4.0.0-beta.0",
-		"file-loader": "^2.0.0",
-		"html-webpack-plugin": "^3.2.0",
-		"mini-css-extract-plugin": "^0.4.0",
-		"node-sass": "^4.9.0",
-		"postcss-loader": "^2.1.5",
-		"push-dir": "^0.4.1",
-		"sass-loader": "^7.0.3",
-		"style-loader": "^0.21.0",
-		"url-loader": "^1.1.2",
-		"webpack": "^4.12.0",
-		"webpack-cli": "^3.0.8",
-		"webpack-dev-server": "^3.1.4",
-		"webpack-md5-hash": "^0.0.6",
-		"yarn": "^1.7.0"
-	}
+  "name": "v2rm",
+  "author": "Vinicius Marques",
+  "copyright": "2018",
+  "version": "2.0.0",
+  "license": "MIT",
+  "main": "",
+  "scripts": {
+    "lint": "eslint src",
+    "build": "webpack -p --progress --config config/webpack.prod.js",
+    "serve": "webpack-dev-server -d --progress --color --config config/webpack.dev.js"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "autoprefixer": "^8.6.2",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "8.0.0-beta.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.0",
+    "postcss-loader": "^2.1.5",
+    "prettier-eslint": "^8.8.1",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2"
+  },
+  "keywords": [
+    "webpack",
+    "babel",
+    "es6",
+    "eslint"
+  ],
+  "dependencies": {
+    "babel-preset-env": "^1.7.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1"
+  }
 }
